[package]
name = "smart-collections"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_collections"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token-metadata = "0.0.1"
anchor-spl-token-metadata = { path = "../../anchor-spl-token-metadata" }